--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,12 +1,10 @@
 {
-    "recommendations": [
-        "esbenp.prettier-vscode",
-        "Vue.volar",
-        "prisma.prisma",
-        "bradlc.vscode-tailwindcss",
-        "dbaeumer.vscode-eslint",
-    ],
-    "unwantedRecommendations": [
-        "octref.vetur"
-    ]
+  "recommendations": [
+    "esbenp.prettier-vscode",
+    "Vue.volar",
+    "prisma.prisma",
+    "bradlc.vscode-tailwindcss",
+    "dbaeumer.vscode-eslint"
+  ],
+  "unwantedRecommendations": ["octref.vetur"]
 }
