--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@ai-sdk/openai": "1.2.0",
     "@nuxt/eslint": "1.3.0",
     "@nuxt/ui": "3.0.0",
+    "ai": "4.1.51",
     "eslint": "^9.0.0",
     "nuxt": "^3.16.2",
+    "ollama-ai-provider": "1.2.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
